fix(password-reset): correct form visibility logic and enhance error message styling

--- a/src/app/login/password-send-email/password-reset/password-reset.component.scss
+++ b/src/app/login/password-send-email/password-reset/password-reset.component.scss
@@ -90,6 +90,10 @@
           outline: none;
         }
       }
+
+      .input-error {
+        border: 1px solid rgba(240, 59, 59, 1);
+      }
     }
 
     p {
@@ -124,6 +128,14 @@
           opacity: 0.6;
         }
       }
+    }
+
+    .error-message-password {
+      color: #ff3860;
+      font-size: 12px;
+      position: relative;
+      margin: -20px 0;
+      text-align: center;
     }
   }
 }
@@ -220,6 +232,11 @@ mat-dialog-content {
       top: 8% !important;
       left: 5% !important;
     }
+
+    .error-message-password {
+      font-size: 10px !important;
+      margin: -19px 0 !important;
+    }
   }
 }
 
@@ -277,8 +294,8 @@ mat-dialog-content {
       padding-left: 40px !important;
     }
 
-    .error-message {
-      font-size: 10px;
+    .error-message-password {
+      font-size: 10px !important;
     }
   }
 }
